--- a/mineSweeper.html
+++ b/mineSweeper.html
@@ -63,7 +63,7 @@
  //  event.returnValue=false   
  //  }   
 </script>
-<script src="mine.js"></script>
+<script src="mineSweeper.js"></script>
 
 </body>
 </html>
